Role-based authorization with permissions and ManyToMany relationship in JPA.